# Sandbox

./: .gitignore  CMakeLists.txt  LICENSE  Notes.md  README.md  build.py  config.hpp.in  misc.md  snmpp.pc.in  webdev2020.md
benchmarks/FormattedOutputs/: CMakeLists.txt  main.cpp
cmake/cmake_format/: CMakeLists.txt  cmake-format
cmake/cmake_format/src/: CMakeLists.txt  hello.cpp  hello.hpp
cmake/packgen/: CMakeLists.txt  build.py  packgen-config.cmake.in  packgen.cmake  packgen2.cmake
cmake/packgen/exec/: CMakeLists.txt  main.cpp
cmake/packgen/packgen/: test.cpp  test.hpp
codingame/: CMakeLists.txt  power_of_thor_ep1.cpp
codingame/inge/: CMakeLists.txt  t1.hpp  t2.hpp
cpp/: CMakeLists.txt  config.hpp.in
cpp/boost/: CMakeLists.txt
cpp/boost/any/: main.cpp
cpp/boost/asio/: task.cpp  task2.cpp  timer1.cpp  timer2.cpp  timer3.cpp  timer4.cpp
cpp/boost/concept/: main.cpp
cpp/boost/functional/: hash.cpp
cpp/boost/geometry/: AreaClockWisePolygon.cpp  CMakeLists.txt  Definitions.hpp  Difference.cpp  ForEachSegmentTuto.cpp  Intersection.cpp  NumSegment.cpp  Overlaps.cpp  Point.cpp  Point.hpp  README.md  TemplatedConversion.cpp  Union.cpp  WithinStrategy.cpp  inherit.cpp
cpp/boost/graph/: Notes.md
cpp/boost/optional/: main.cpp
cpp/boost/state_machine/: notes.md  player_simple_tuto.cpp  turnstile.cpp  turnstile_functor_frontend.cpp
cpp/cmake-modules/: install.cmake
cpp/codingame/: shadows_of_the_night_ep1.cpp
cpp/codingame/inge/: main.cpp
cpp/cppcon/: CMakeLists.txt
cpp/cppcon/cppcon2018/: CMakeLists.txt
cpp/cppnow/: CMakeLists.txt
cpp/dataparser/: CMakeLists.txt  DataParser.cpp  DataParser.hpp  gen.py  main.cpp  semicol_sep.txt  space_sep.txt
cpp/geographiclib/: CMakeLists.txt  README.md  geodesic.cpp
cpp/gtest/: CMakeLists.txt  README.md  links.txt
cpp/gtest/cmake-modules/: CodeCoverage.cmake  DownloadProject.CMakeLists.in  DownloadProject.cmake
cpp/gtest/src/: CMakeLists.txt
cpp/gtest/test/: CMakeLists.txt  Cool.cpp  Stuff.cpp  coin_flipper.cpp
cpp/hunter/: CMakeLists.txt  README.md  main.cpp
cpp/nlohmann_json/: CMakeLists.txt  README.md  main.cpp
cpp/plugins/: CMakeLists.txt  interface.hpp  main.cpp  plugs.cpp  plugs.hpp
cpp/rstat/: CMakeLists.txt  RunningStats.cpp  RunningStats.hpp  main.cpp
cpp/snmpp/sandbox/: CMakeLists.txt  GenericCaller.cpp
cpp/sort_by_index/: CMakeLists.txt  RangeFinder.cpp  main.cpp
cpp/std/: CMakeLists.txt  CastOperator.cpp  PrettyFuncMacro.cpp  TemplateSpecialization.cpp  Vector.cpp  WeakPtr.cpp  any_of.cpp  conversion.cpp  explicit_bool_operator.cpp  factory.cpp  for_each.cpp  inheritance.cpp  inheritance2.cpp  inheritance3.cpp  is_even.cpp  ostreamTemplateOverload.cpp  promise_set_exception.cpp  reference_wrapper.cpp  rvalue.cpp  smart_pointer_destructor.cpp  template_specialization2.cpp  templatedForLoop.cpp  vector_square_bracket_accessor.cpp
cpp/thread-pool/: CMakeLists.txt  main.cpp
cpp/type_concept/: CMakeLists.txt  main.cpp
elastic/flex/: CMakeLists.txt
elastic/flex/cmake/: flex_deps.cmake  flex_rpath.cmake
elastic/flex/flex/: CMakeLists.txt
elastic/flex/samples/: CMakeLists.txt  http_get.cpp  http_post.cpp  http_put.cpp  rstat.cpp  simple_fetcher.cpp  sine_producer.cpp  zscore.cpp
elastic/flex/test/: CMakeLists.txt  test_http_client_coro.cpp  test_http_client_session.cpp
elastic/flex/tests/: CMakeLists.txt  test_cycle_detect.cpp  test_http_client_asio.cpp  test_http_client_session.cpp
grpc/api/: CMakeLists.txt  greet.proto
grpc/client/: CMakeLists.txt  main.cpp
hackerrank/: CMakeLists.txt  box_it.cpp  find_string.py  split_and_join.py  string_validator.py  swap_case.py
hackerrank/array2d/: main.cpp
hackerrank/attribute_parser/: graph.cpp  graph.hpp  input.hpp  main.cpp
hackerrank/bot_saves_princess/: main.cpp
hackerrank/cpp_class_template/: main.cpp
hackerrank/crush/: CMakeLists.txt  benchmark.cpp  crush.cpp  crush.hpp  interval.hpp  main.cpp  operation.hpp
hackerrank/dynamic_array/: main.cpp
opencl/HandsOnOpenCL-tuto/: CMakeLists.txt  README.md  ex1.cpp  ex2.c
opencl/HandsOnOpenCL-tuto/common/: err_code.h  odi.hpp  wtime.h
opencv/samples/: CMakeLists.txt  Notes.md  example-2-1.cpp  example-2-10.cpp  example-2-3.cpp  example-2-4.cpp  example-2-5.cpp  example-2-6.cpp  example-2-7.cpp  example-2-8.cpp  example-2-9.cpp
opencv/samples/chap2/: ex1.cpp  ex10.cpp  ex3.cpp  ex4.cpp  ex5.cpp  ex6.cpp  ex7.cpp  ex8.cpp  ex9.cpp
opencv/samples/chap4/: e1.cpp  mat.cpp
prep/: CMakeLists.txt  climbing_leaderboard.cpp  find_missing_element_in_sorted_array.cpp  find_range.cpp  find_range.hpp  gcd_euclid.cpp  main1.cpp  map.cpp  materials.md  shape.cpp  third_latest_data.cpp  tree_of_errors.cpp
prep/complete_search/: CMakeLists.txt  generating_permutations.cpp  queens_table.cpp
prep/laaksonen/: CMakeLists.txt
prep/laaksonen/complete_search/: generating_subsets.cpp
prep/laaksonen/dynamic_programming/: coin.cpp
prep/laaksonen/graph/: CMakeLists.txt  traversal.cpp
prep/tall_ranges/: CMakeLists.txt  main.cpp  readme.md  solution.md
prep/tall_ranges/inputs/: input_ranges.txt
prep/tree_of_errors_test_cases/: input007.txt  input010.txt  input011.txt  input012.txt  input013.txt  input014.txt  input015.txt  input016.txt  output007.txt  output013.txt  output014.txt
samples/: CMakeLists.txt  README.md
samples/Benchmark/: CMakeLists.txt  main.cpp
samples/Math/: CMakeLists.txt
samples/Math/Core/: CMakeLists.txt  FuncSample.cpp  QuantitySample.cpp  VariableSample.cpp  VariablesSample.cpp
samples/Tensor/: CMakeLists.txt
samples/Tensor/MultiIndex/: ComleteInt.cpp  PartialInt.cpp  main.cpp
samples/Utils/: CMakeLists.txt  FormattedOutputSample.cpp  GetCurrentDateSample.cpp
samples/fake/: CMakeLists.txt  main.cpp
src/: CMakeLists.txt
src/snmpp/: CMakeLists.txt
src/snmpp/Benchmark/: Benchmark.hpp  BenchmarkConfig.cpp  BenchmarkConfig.hpp
src/snmpp/Plot/: Config.cpp  Config.hpp  GnuPlotter.cpp  GnuPlotter.hpp  Plotter.hpp  (+1 more)
tests/: CMakeLists.txt  README.md
tests/Core/: CMakeLists.txt  VariablesTests.cpp
tests/Plot/: main.cpp
(+458 files in other folders)
